# Hello-world-for-newcomers

./: CMakeLists.txt  README.md  debugScreen.h  main.c
